# AoC-2025

./: .gitignore  cabal.project
Day2/: Day2.cabal  Main2  Main3
Day2/app/: Main.hi
Day2/test/: Main.hs  Tests.hs
Day4/app/: Main.hs
Day8/: Day8.cabal  Main.txt  report.html
Day8/app/: Main.hs
Day_1/: Day1.cabal
Day_1/app/: Main.hs
Day_2/: LICENSE
Day_2/app/: Main.hs
Day_3/: Day3.cabal
Day_3/app/: Main.hs
Day_4/: Day4.cabal  LICENSE
Day_5/: Day5.cabal
Day_5/app/: Main.hs
Day_6/: Day6.cabal
Day_6/app/: Main.hs
Day_7/: Day7.cabal
Day_7/app/: Main.hs
Day_8/: Day8.cabal  Day_8.cabal
Day_8/app/: Main.hs
libAoC/: CHANGELOG.md  libAoC.cabal
libAoC/src/AoC/: Framework.hs
