cabal-version:      3.0
name:               Day2
version:            0.1.0.0
synopsis:           Advent of Code 2025 with test suite
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Somogyi András
maintainer:         somafw@gmail.com
-- copyright:
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable Main
  build-depends:    base ^>=4.21.0.0
                  , split
 
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  default-extensions: MultilineStrings
