cabal-version:   3.12
name:            Day1
version:         0.1.0.0
license:         NONE
author:          Somogyi András
maintainer:      somafw@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable Day1
    import:           warnings
    main-is:          app/Main.hs

    default-extensions: MultilineStrings
    build-depends:    base ^>=4.21.0.0
                    , mtl 
    default-language: Haskell2010
