cabal-version:   3.12
name:            Day3
version:         0.1.0.0
license:         NONE
author:          Somogyi András
maintainer:      somafw@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable Day3
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.21.0.0
                    , mtl
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions: MultilineStrings
