cabal-version:      3.12

name:               libAoC

version:            0.1.0.0



license:            BSD-3-Clause

license-file:       LICENSE

author:             Somogyi András


category:           Language
build-type:         Simple

extra-doc-files:    CHANGELOG.md


common warnings
    ghc-options: -Wall

library
    -- Import common warning flags.
    import:           warnings

    -- Modules exported by the library.
    exposed-modules:  AoC.Framework

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:    base ^>=4.21.0.0

    -- Directories containing source files.
    hs-source-dirs:   src

    -- Base language which the package is written in.
    default-language: Haskell2010
